--- a/ProjetoGuruSA/ProjetoGuruSA/Views/Usuario/Create.cshtml
+++ b/ProjetoGuruSA/ProjetoGuruSA/Views/Usuario/Create.cshtml
@@ -42,7 +42,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Senha, "Senha", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.PasswordFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -80,7 +80,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Página Princial", "../Home/Index")
 </div>
 
 @section Scripts {
