Ajuste do create das perguntas e criação da função de logoff.

--- a/ProjetoGuru/ProjetoGuru/Views/Shared/_Layout.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
                     else
                     {
                         <li>@Html.ActionLink("Perfil de Usuário", "Details/"+Session["usuarioID"], "Usuario")</li>
+                        <li>@Html.ActionLink("Sair", "Logoff", "Usuario")</li>
                     }
                 </ul>
             </div>
