--- a/ProjetoGuru/ProjetoGuru/Views/Usuario/Details.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Usuario/Details.cshtml
@@ -61,5 +61,6 @@
 </div>
 <p>
     @Html.ActionLink("Editar", "Edit", new { id = Model.UsuarioID }) |
-    @Html.ActionLink("Página Principal", "../Home/Index")
+    @Html.ActionLink("Página Principal", "../Home/Index") |
+    @Html.ActionLink("Nova Pergunta", "../Pergunta/Create")
 </p>
