--- a/ProjetoGuru/ProjetoGuru/Views/Usuario/Details.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Usuario/Details.cshtml
@@ -61,6 +61,6 @@
 </div>
 <p>
     @Html.ActionLink("Editar", "Edit", new { id = Model.UsuarioID }) |
-    @Html.ActionLink("Página Principal", "../Home/Index") |
-    @Html.ActionLink("Nova Pergunta", "../Pergunta/Create")
+    @Html.ActionLink("Nova Pergunta", "../Pergunta/Create") |
+    @Html.ActionLink("Minhas Perguntas", "../Pergunta/Index")
 </p>
