--- a/ProjetoGuru/ProjetoGuru/Views/Resposta/Create.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Resposta/Create.cshtml
@@ -1,48 +1,26 @@
 ﻿@model ProjetoGuru.Models.Resposta
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Responder Pergunta";
 }
-
-<h2>Create</h2>
-
+<h2>Respondendo Pergunta</h2>
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Resposta</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.PerguntaID, "PerguntaID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("PerguntaID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.PerguntaID, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.UsuarioID, "UsuarioID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("UsuarioID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.UsuarioID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
+        @Html.Hidden("PerguntaID", ViewData["id"])
+        @Html.Hidden("UsuarioID", Session["usuarioID"])
+       
         <div class="form-group">
             @Html.LabelFor(model => model.Texto, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Texto, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Texto, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Texto, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Data, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Data, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Data, "", new { @class = "text-danger" })
+                @Request.
             </div>
         </div>
 
@@ -58,12 +36,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Responder" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <br />
+    @Html.ActionLink("Voltar para Perguntas", "../Pergunta/Index/")
 </div>
