Alterações na interface de Perguntas e Controle de Resposta.

--- a/ProjetoGuru/ProjetoGuru/Views/Pergunta/Index.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Pergunta/Index.cshtml
@@ -57,6 +57,10 @@
         {
             <td>Ativa</td>
         }
+        else if (item.Status == "R")
+        {
+            <td>Respondida</td>
+        }
        
         <td>
             @Html.DisplayFor(modelItem => item.Data)            
