Ajuste referente a listagem das perguntas (permissões de tipos de usuário). Ajustes de interface de criação de respostas, edição de usuários e cadastro de categorias pelos Gurus.

--- a/ProjetoGuru/ProjetoGuru/Views/Pergunta/Index.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Pergunta/Index.cshtml
@@ -6,9 +6,12 @@
 
 <h2>Lista de Perguntas</h2>
 
+@if ((string)Session["usuarioTipo"] == "1" || (string)Session["usuarioTipo"] == "3")
+{
 <p>
     @Html.ActionLink("Nova Pergunta", "Create")
 </p>
+}
 <table class="table">
     <tr>
         <th>
