--- a/ProjetoGuru/ProjetoGuru/Views/Resposta/Create.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Resposta/Create.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Responder Pergunta";
 }
-<h2>Respondendo Pergunta</h2>
+<h2>Responder Pergunta</h2>
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
@@ -20,10 +20,9 @@
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.Texto, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Texto, "", new { @class = "text-danger" })
-                @Request.
             </div>
         </div>
-
+        <!--
         <div class="form-group">
             @Html.LabelFor(model => model.Avaliacao, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -33,7 +32,7 @@
                 </div>
             </div>
         </div>
-
+        -->
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Responder" class="btn btn-default" />
