--- a/ProjetoGuru/ProjetoGuru/Views/Usuario/Edit.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Usuario/Edit.cshtml
@@ -1,31 +1,24 @@
 ﻿@model ProjetoGuru.Models.Usuario
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar Usuário";
 }
 
-<h2>Edit</h2>
+<h2>Editar Usuário</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Usuario</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.UsuarioID)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">
+                Nome
+            </label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
@@ -33,7 +26,19 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Imagem, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">
+                E-Mail
+            </label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2">
+                Imagem
+            </label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Imagem, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Imagem, "", new { @class = "text-danger" })
@@ -41,7 +46,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Senha, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">
+                Senha
+            </label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
@@ -49,7 +56,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">
+                Data de Nascimento
+            </label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
@@ -57,7 +66,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PaypalToken, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">
+                Paypal
+            </label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.PaypalToken, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.PaypalToken, "", new { @class = "text-danger" })
@@ -65,7 +76,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.UsuarioTipoID, "UsuarioTipoID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">
+                Tipo de Usuário
+            </label>
             <div class="col-md-10">
                 @Html.DropDownList("UsuarioTipoID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.UsuarioTipoID, "", new { @class = "text-danger" })
@@ -74,12 +87,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar para o Perfil", "../Usuario/Details/"+Session["usuarioID"])
 </div>
