--- a/ProjetoGuru/ProjetoGuru/Views/UsuarioCategoria/Create.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/UsuarioCategoria/Create.cshtml
@@ -1,43 +1,38 @@
 ﻿@model ProjetoGuru.Models.UsuarioCategoria
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Cadastro de Categorias";
 }
 
-<h2>Create</h2>
+<h2>Cadastro de Categorias</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>UsuarioCategoria</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.UsuarioID, "UsuarioID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("UsuarioID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.UsuarioID, "", new { @class = "text-danger" })
-            </div>
-        </div>
+
+        @Html.Hidden("UsuarioID", Session["usuarioID"])
 
         <div class="form-group">
-            @Html.LabelFor(model => model.CategoriaID, "CategoriaID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CategoriaID, "Categoria", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("CategoriaID", null, htmlAttributes: new { @class = "form-control" })
+                
                 @Html.ValidationMessageFor(model => model.CategoriaID, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Cadastrar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Voltar ao Perfil", "../Usuario/Details/"+Session["usuarioID"])
 </div>
