Ajustes dos nomes de links de vínculo das categorias.

--- a/ProjetoGuru/ProjetoGuru/Views/Usuario/Details.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Usuario/Details.cshtml
@@ -71,7 +71,7 @@
     }
     else if ((string)Session["usuarioID"] == "2")
     {
-        @Html.ActionLink("Cadastrar Categorias", "../UsuarioCategoria/Create")
+        @Html.ActionLink("Categorias Vinculadas", "../UsuarioCategoria/Index")
         @ViewBag.Barra;
         @Html.ActionLink("Responder Perguntas", "../Pergunta/Index")
     }
