--- a/ProjetoGuru/ProjetoGuru/Views/UsuarioCategoria/Create.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/UsuarioCategoria/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model ProjetoGuru.Models.UsuarioCategoria
 
 @{
-    ViewBag.Title = "Cadastro de Categorias";
+    ViewBag.Title = "Vincular Categoria";
 }
 
-<h2>Cadastro de Categorias</h2>
+<h2>Vincular Categoria</h2>
 
 @using (Html.BeginForm()) 
 {
