--- a/ProjetoGuru/ProjetoGuru/Views/Resposta/Create.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Resposta/Create.cshtml
@@ -8,6 +8,12 @@
 {
     @Html.AntiForgeryToken()
     
+    <br />
+    <p>
+        <strong>
+            @ViewBag.Pergunta
+        </strong>
+    </p>
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
