--- a/ProjetoGuru/ProjetoGuru/Views/Usuario/Create.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Usuario/Create.cshtml
@@ -40,7 +40,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Senha,"Senha", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.PasswordFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Senha, new { htmlAttributes = new { @class = "form-control", @Type = "password" } })
                 @Html.ValidationMessageFor(model => model.Senha, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -48,16 +48,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataNascimento,"Data de Nascimento", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control", @Type = "date" } })
                 @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PaypalToken,"Paypal", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.PaypalToken, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.PaypalToken, "", new { @class = "text-danger" })
             </div>
         </div>
 
