Ajustes na dela de Delete dos vínculos das categorias (Usuário Guru). Correção do filtro de perguntas para Usuários Guru (aparecia mensagens deletadas). Ajustes na tela de visualização das categorias vinculadas, para um visual melhor. Links de redirecionamento corrigidos nas mesmas Views.

--- a/ProjetoGuru/ProjetoGuru/Views/UsuarioCategoria/Create.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/UsuarioCategoria/Create.cshtml
@@ -34,5 +34,5 @@
 }
 
 <div>
-    @Html.ActionLink("Voltar ao Perfil", "../Usuario/Details/"+Session["usuarioID"])
+    @Html.ActionLink("Categorias Vinculadas", "../UsuarioCategoria")
 </div>
