Ajustes de link e dados da View da Pergunta.

--- a/ProjetoGuru/ProjetoGuru/Views/Pergunta/Details.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Pergunta/Details.cshtml
@@ -1,5 +1,4 @@
 ﻿@model ProjetoGuru.Models.Pergunta
-
 @{
     ViewBag.Title = "Detalhes da Pergunta";
 }
@@ -23,7 +22,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Status)
+            @ViewBag.Mensagem
         </dd>
 
         <dt>
