Correções de nomes da tela Create e da tela Index da Categoria. Correções também na tela de detalhes do Usuário, para definições disponíveis para administradores.

--- a/ProjetoGuru/ProjetoGuru/Views/Categoria/Index.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Categoria/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ProjetoGuru.Models.Categoria>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista de Categorias";
 }
 
-<h2>Index</h2>
+<h2>Lista de Categorias</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nova Categoria", "Create")
 </p>
 <table class="table">
     <tr>
@@ -29,8 +29,8 @@
             @Html.DisplayFor(modelItem => item.Nome)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CategoriaID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CategoriaID }) |
+            @Html.ActionLink("Editar", "Edit", new { id=item.CategoriaID }) |
+            @Html.ActionLink("Detalhes", "Details", new { id=item.CategoriaID }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.CategoriaID })
         </td>
     </tr>
