--- a/ProjetoGuru/ProjetoGuru/Views/Categoria/Create.cshtml
+++ b/ProjetoGuru/ProjetoGuru/Views/Categoria/Create.cshtml
@@ -1,29 +1,28 @@
 ﻿@model ProjetoGuru.Models.Categoria
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Cadastrar Categoria";
 }
 
-<h2>Create</h2>
+<h2>Cadastrar Categoria</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Categoria</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.CategoriaParent, "CategoriaParent", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CategoriaParent, "Categoria Principal", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("CategoriaParent", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("CategoriaParent", null, htmlAttributes: new { @class = "form-control"})
                 @Html.ValidationMessageFor(model => model.CategoriaParent, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Nome, "Nome da Categoria", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
@@ -32,12 +31,12 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Cadastrar" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Lista de Categorias", "Index")
 </div>
